infra/configs/hubble-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hubble-gateway
  namespace: cilium
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: hubble-web
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: cilium
spec:
  parentRefs:
    - name: hubble-gateway
      namespace: cilium
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
