infra/configs/longhorn-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: longhorn
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: longhorn-web
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn
spec:
  parentRefs:
    - name: longhorn-gateway
      namespace: longhorn
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
